# ast-interpreter

./: CMakeLists.txt  Environment.cpp  Environment.h  InterpreterVisitor.cpp  InterpreterVisitor.h  Makefile  Object.cpp  Object.h  ObjectV2.cpp  dockernote.txt  run_test.sh
cmd/: ASTInterpreter.cpp
include/: Environment.h  ObjectV2.h
test/: Makefile  libtest.c
test/mytest/: test00.c  test01.c  test02.c  test02.output  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c
unittest/: CMakeLists.txt  object_test.cpp
